@@ -121,8 +121,8 @@ int main(int argc, char **argv)
 		}
 	contextWindow->LFSTK_resizeWindow(GADGETWIDTH,sy,true);
 	wc->LFSTK_setContextWindow(contextWindow);
-	wc->contextWindowPos=CONTEXTATMOUSE;
-	wc->contextYOffset=-40;
+	wc->contextWindowPos=CONTEXTBELOW;
+	//wc->contextYOffset=-40;
 	printf("Number of gadgets in window=%i\n",wc->LFSTK_gadgetCount());
 	int retval=apc->LFSTK_runApp();
 	delete apc;
