@@ -1,4 +1,5 @@
 0.6.1
+Added extra positioning for window context window.
 Updated Window example.
 Added context window to LFSTK_windowClass.
 Fixed updating list when dragging scroll button.
